# ollama-metrics-proxy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: config.example.toml  prices.example.toml
scripts/: export_csv.py  hook-ollama_usage_proxy.py  init_db.py  ollama-proxy.spec  ollama-report.spec  report_usage.py  run.sh
src/ollama_usage_proxy/: __init__.py  app.py  axis_format.py  config.py  cost_graphs.py  db.py  default_config.toml  default_prices.toml  metrics_buffer.py  models.py  pricing.py  report_data.py  report_main.py  summary.py  system_telemetry.py  token_graphs.py  usage.py
src/ollama_usage_proxy/static/: index.html
tests/: conftest.py  test_chart_rendering.py  test_dashboard_e2e.py  test_dashboard_endpoints.py  test_dashboard_revamp.py  test_gpu_telemetry.py  test_metrics_buffer.py  test_pricing.py  test_usage_metrics.py
work-plans/: ollama_usage_proxy_plan.md
