[project]
name = "ollama-usage-proxy"
version = "0.3.0"
description = "A local HTTP proxy for tracking Ollama model usage metrics"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "rich>=13.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
ollama-proxy = "ollama_usage_proxy.app:main"
ollama-report = "ollama_usage_proxy.report_main:main"

[project.urls]
Homepage = "https://github.com/yourname/ollama-usage-proxy"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ollama_usage_proxy*"]

[tool.setuptools.package-data]
"ollama_usage_proxy" = ["*.toml"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]